--- a/index.html
+++ b/index.html
@@ -8,21 +8,7 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-  <h1>Wanna quiz yourself?</h1>
-  <div id="container">
-    <h2 id="question">Here is a question for you.</h2>
-    <div id="answers">
-      <div class="rows">
-        <button class="answer-btn">Answer A</button>
-        <button class="answer-btn">Answer B</button>
-      </div>
-      <div class="rows">
-        <button class="answer-btn">Answer C</button>
-        <button class="answer-btn">Answer D</button>
-      </div>
-    </div>
-    <p id="result"></p>
-  </div>
+  <h1>Coucou !</h1>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="./src/app.js"></script>
 </body>
