Add separate CSS files for home and quiz pages

--- a/index.html
+++ b/index.html
@@ -5,10 +5,153 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Let's quiz ourselves</title>
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/home.css">
 </head>
 <body>
   <h1>Coucou !</h1>
+  <div id="home-container">
+    <h2>Choose your quiz</h2>
+    <h3>All categories</h3>
+    <div class="theme-box">
+      <button class="theme-btn">All categories</button>
+      <div>
+        <button class="difficulty">Easy</button>
+        <button class="difficulty">Medium</button>
+        <button class="difficulty">Hard</button>  
+      </div>
+    </div>
+    <hr>
+    <h3>Or choose a theme</h3>
+    <p>(all levels of difficulty mixed or choose a level)</p>
+    <div class="theme-box">
+      <button class="theme-btn" data-category = "9">General knowledge</button>
+      <div>
+        <button class="difficulty" data-category="9" data-level="easy">Easy</button>
+        <button class="difficulty" data-category="9" data-level="medium">Medium</button>
+        <button class="difficulty" data-category="9" data-level="hard">Hard</button>  
+      </div>
+    </div>
+    <div class="theme-box">
+      <button class="theme-btn">Entertainment: Books</button>
+      <div>
+        <button class="difficulty">Easy</button>
+        <button class="difficulty">Medium</button>
+        <button class="difficulty">Hard</button>  
+      </div>
+    </div>
+    <div class="theme-box">
+      <button class="theme-btn">Entertainment: Film</button>
+      <div>
+        <button class="difficulty">Easy</button>
+        <button class="difficulty">Medium</button>
+        <button class="difficulty">Hard</button>  
+      </div>
+    </div>
+    <div class="theme-box">
+      <button class="theme-btn">Entertainment: Music</button>
+      <div>
+        <button class="difficulty">Easy</button>
+        <button class="difficulty">Medium</button>
+        <button class="difficulty">Hard</button>  
+      </div>
+    </div>
+    <div class="theme-box">
+      <button class="theme-btn">Entertainment: Television</button>
+      <div>
+        <button class="difficulty">Easy</button>
+        <button class="difficulty">Medium</button>
+        <button class="difficulty">Hard</button>  
+      </div>
+    </div>
+    <div class="theme-box">
+      <button class="theme-btn">Entertainment: Video games</button>
+      <div>
+        <button class="difficulty">Easy</button>
+        <button class="difficulty">Medium</button>
+        <button class="difficulty">Hard</button>  
+      </div>
+    </div>
+    <div class="theme-box">
+      <button class="theme-btn">Entertainment: Board games</button>
+      <div>
+        <button class="difficulty">Easy</button>
+        <button class="difficulty">Medium</button>
+        <button class="difficulty">Hard</button>  
+      </div>
+    </div>
+    <div class="theme-box">
+      <button class="theme-btn">Science & nature</button>
+      <div>
+        <button class="difficulty">Easy</button>
+        <button class="difficulty">Medium</button>
+        <button class="difficulty">Hard</button>  
+      </div>
+    </div>
+    <div class="theme-box">
+      <button class="theme-btn">Mythology</button>
+      <div>
+        <button class="difficulty">Easy</button>
+        <button class="difficulty">Medium</button>
+        <button class="difficulty">Hard</button>  
+      </div>
+    </div>
+    <div class="theme-box">
+      <button class="theme-btn">Geography</button>
+      <div>
+        <button class="difficulty">Easy</button>
+        <button class="difficulty">Medium</button>
+        <button class="difficulty">Hard</button>  
+      </div>
+    </div>
+    <div class="theme-box">
+      <button class="theme-btn">History</button>
+      <div>
+        <button class="difficulty">Easy</button>
+        <button class="difficulty">Medium</button>
+        <button class="difficulty">Hard</button>  
+      </div>
+    </div>
+    <div class="theme-box">
+      <button class="theme-btn">Art</button>
+      <div>
+        <button class="difficulty">Easy</button>
+        <button class="difficulty">Medium</button>
+        <button class="difficulty">Hard</button>  
+      </div>
+    </div>
+    <div class="theme-box">
+      <button class="theme-btn">Animals</button>
+      <div>
+        <button class="difficulty">Easy</button>
+        <button class="difficulty">Medium</button>
+        <button class="difficulty">Hard</button>  
+      </div>
+    </div>
+    <div class="theme-box">
+      <button class="theme-btn">Entertainment: Comics</button>
+      <div>
+        <button class="difficulty">Easy</button>
+        <button class="difficulty">Medium</button>
+        <button class="difficulty">Hard</button>  
+      </div>
+    </div>
+    <div class="theme-box">
+      <button class="theme-btn">Entertainment: Japanese anime & manga</button>
+      <div>
+        <button class="difficulty">Easy</button>
+        <button class="difficulty">Medium</button>
+        <button class="difficulty">Hard</button>  
+      </div>
+    </div>
+    <div class="theme-box">
+      <button class="theme-btn">Entertainment: Cartoon & animation</button>
+      <div>
+        <button class="difficulty">Easy</button>
+        <button class="difficulty">Medium</button>
+        <button class="difficulty">Hard</button>  
+      </div>
+    </div>
+  </div>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="./src/app.js"></script>
 </body>
