--- a/quiz.html
+++ b/quiz.html
@@ -5,9 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Let's quiz ourselves</title>
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/quiz-style.css">
 </head>
 <body>
+  <a href="./index.html">Back</a>
   <h1>Wanna play?</h1>
   <div id="container">
     <div id="question-info">
