Add home page and link the home to the quiz request

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <div class="theme-box">
       <button class="theme-btn">All categories</button>
       <div>
-        <button class="difficulty">Easy</button>
-        <button class="difficulty">Medium</button>
-        <button class="difficulty">Hard</button>  
+        <button class="difficulty" data-level="easy">Easy</button>
+        <button class="difficulty" data-level="medium">Medium</button>
+        <button class="difficulty" data-level="hard">Hard</button>  
       </div>
     </div>
     <hr>
     <h3>Or choose a theme</h3>
     <p>(all levels of difficulty mixed or choose a level)</p>
     <div class="theme-box">
-      <button class="theme-btn" data-category = "9">General knowledge</button>
+      <button class="theme-btn" data-category="9">General knowledge</button>
       <div>
         <button class="difficulty" data-category="9" data-level="easy">Easy</button>
         <button class="difficulty" data-category="9" data-level="medium">Medium</button>
@@ -32,123 +32,123 @@
       </div>
     </div>
     <div class="theme-box">
-      <button class="theme-btn">Entertainment: Books</button>
+      <button class="theme-btn" data-category="10" >Entertainment: Books</button>
       <div>
-        <button class="difficulty">Easy</button>
-        <button class="difficulty">Medium</button>
-        <button class="difficulty">Hard</button>  
+        <button class="difficulty" data-category="10" data-level="easy">Easy</button>
+        <button class="difficulty" data-category="10" data-level="medium">Medium</button>
+        <button class="difficulty" data-category="10" data-level="hard">Hard</button>  
       </div>
     </div>
     <div class="theme-box">
-      <button class="theme-btn">Entertainment: Film</button>
+      <button class="theme-btn" data-category="11">Entertainment: Film</button>
       <div>
-        <button class="difficulty">Easy</button>
-        <button class="difficulty">Medium</button>
-        <button class="difficulty">Hard</button>  
+        <button class="difficulty" data-category="11" data-level="easy">Easy</button>
+        <button class="difficulty" data-category="11" data-level="medium">Medium</button>
+        <button class="difficulty" data-category="11" data-level="hard">Hard</button>  
       </div>
     </div>
     <div class="theme-box">
-      <button class="theme-btn">Entertainment: Music</button>
+      <button class="theme-btn" data-category="12">Entertainment: Music</button>
       <div>
-        <button class="difficulty">Easy</button>
-        <button class="difficulty">Medium</button>
-        <button class="difficulty">Hard</button>  
+        <button class="difficulty" data-category="12" data-level="easy">Easy</button>
+        <button class="difficulty" data-category="12" data-level="medium">Medium</button>
+        <button class="difficulty" data-category="12" data-level="hard">Hard</button>  
       </div>
     </div>
     <div class="theme-box">
-      <button class="theme-btn">Entertainment: Television</button>
+      <button class="theme-btn" data-category="14">Entertainment: Television</button>
       <div>
-        <button class="difficulty">Easy</button>
-        <button class="difficulty">Medium</button>
-        <button class="difficulty">Hard</button>  
+        <button class="difficulty" data-category="14" data-level="easy">Easy</button>
+        <button class="difficulty" data-category="14" data-level="medium">Medium</button>
+        <button class="difficulty" data-category="14" data-level="hard">Hard</button>  
       </div>
     </div>
     <div class="theme-box">
-      <button class="theme-btn">Entertainment: Video games</button>
+      <button class="theme-btn" data-category="15">Entertainment: Video games</button>
       <div>
-        <button class="difficulty">Easy</button>
-        <button class="difficulty">Medium</button>
-        <button class="difficulty">Hard</button>  
+        <button class="difficulty" data-category="15" data-level="easy">Easy</button>
+        <button class="difficulty" data-category="15" data-level="medium">Medium</button>
+        <button class="difficulty" data-category="15" data-level="hard">Hard</button>  
       </div>
     </div>
     <div class="theme-box">
-      <button class="theme-btn">Entertainment: Board games</button>
+      <button class="theme-btn" data-category="16">Entertainment: Board games</button>
       <div>
-        <button class="difficulty">Easy</button>
-        <button class="difficulty">Medium</button>
-        <button class="difficulty">Hard</button>  
+        <button class="difficulty" data-category="16" data-level="easy">Easy</button>
+        <button class="difficulty" data-category="16" data-level="medium">Medium</button>
+        <button class="difficulty" data-category="16" data-level="hard">Hard</button>  
       </div>
     </div>
     <div class="theme-box">
-      <button class="theme-btn">Science & nature</button>
+      <button class="theme-btn" data-category="17">Science & nature</button>
       <div>
-        <button class="difficulty">Easy</button>
-        <button class="difficulty">Medium</button>
-        <button class="difficulty">Hard</button>  
+        <button class="difficulty" data-category="17" data-level="easy">Easy</button>
+        <button class="difficulty" data-category="17" data-level="medium">Medium</button>
+        <button class="difficulty" data-category="17" data-level="hard">Hard</button>  
       </div>
     </div>
     <div class="theme-box">
-      <button class="theme-btn">Mythology</button>
+      <button class="theme-btn" data-category="20">Mythology</button>
       <div>
-        <button class="difficulty">Easy</button>
-        <button class="difficulty">Medium</button>
-        <button class="difficulty">Hard</button>  
+        <button class="difficulty" data-category="20" data-level="easy">Easy</button>
+        <button class="difficulty" data-category="20" data-level="medium">Medium</button>
+        <button class="difficulty" data-category="20" data-level="hard">Hard</button>  
       </div>
     </div>
     <div class="theme-box">
-      <button class="theme-btn">Geography</button>
+      <button class="theme-btn" data-category="22">Geography</button>
       <div>
-        <button class="difficulty">Easy</button>
-        <button class="difficulty">Medium</button>
-        <button class="difficulty">Hard</button>  
+        <button class="difficulty" data-category="22" data-level="easy">Easy</button>
+        <button class="difficulty" data-category="22" data-level="medium">Medium</button>
+        <button class="difficulty" data-category="22" data-level="hard">Hard</button>  
       </div>
     </div>
     <div class="theme-box">
-      <button class="theme-btn">History</button>
+      <button class="theme-btn" data-category="23">History</button>
       <div>
-        <button class="difficulty">Easy</button>
-        <button class="difficulty">Medium</button>
-        <button class="difficulty">Hard</button>  
+        <button class="difficulty" data-category="23" data-level="easy">Easy</button>
+        <button class="difficulty" data-category="23" data-level="medium">Medium</button>
+        <button class="difficulty" data-category="23" data-level="hard">Hard</button>  
       </div>
     </div>
     <div class="theme-box">
-      <button class="theme-btn">Art</button>
+      <button class="theme-btn" data-category="25">Art</button>
       <div>
-        <button class="difficulty">Easy</button>
-        <button class="difficulty">Medium</button>
-        <button class="difficulty">Hard</button>  
+        <button class="difficulty" data-category="25" data-level="easy">Easy</button>
+        <button class="difficulty" data-category="25" data-level="medium">Medium</button>
+        <button class="difficulty" data-category="25" data-level="hard">Hard</button>  
       </div>
     </div>
     <div class="theme-box">
-      <button class="theme-btn">Animals</button>
+      <button class="theme-btn" data-category="27">Animals</button>
       <div>
-        <button class="difficulty">Easy</button>
-        <button class="difficulty">Medium</button>
-        <button class="difficulty">Hard</button>  
+        <button class="difficulty" data-category="27" data-level="easy">Easy</button>
+        <button class="difficulty" data-category="27" data-level="medium">Medium</button>
+        <button class="difficulty" data-category="27" data-level="hard">Hard</button>  
       </div>
     </div>
     <div class="theme-box">
-      <button class="theme-btn">Entertainment: Comics</button>
+      <button class="theme-btn" data-category="29">Entertainment: Comics</button>
       <div>
-        <button class="difficulty">Easy</button>
-        <button class="difficulty">Medium</button>
-        <button class="difficulty">Hard</button>  
+        <button class="difficulty" data-category="29" data-level="easy">Easy</button>
+        <button class="difficulty" data-category="29" data-level="medium">Medium</button>
+        <button class="difficulty" data-category="29" data-level="hard">Hard</button>  
       </div>
     </div>
     <div class="theme-box">
-      <button class="theme-btn">Entertainment: Japanese anime & manga</button>
+      <button class="theme-btn" data-category="31">Entertainment: Japanese anime & manga</button>
       <div>
-        <button class="difficulty">Easy</button>
-        <button class="difficulty">Medium</button>
-        <button class="difficulty">Hard</button>  
+        <button class="difficulty" data-category="31" data-level="easy">Easy</button>
+        <button class="difficulty" data-category="31" data-level="medium">Medium</button>
+        <button class="difficulty" data-category="31" data-level="hard">Hard</button>  
       </div>
     </div>
     <div class="theme-box">
-      <button class="theme-btn">Entertainment: Cartoon & animation</button>
+      <button class="theme-btn" data-category="32">Entertainment: Cartoon & animation</button>
       <div>
-        <button class="difficulty">Easy</button>
-        <button class="difficulty">Medium</button>
-        <button class="difficulty">Hard</button>  
+        <button class="difficulty" data-category="32" data-level="easy">Easy</button>
+        <button class="difficulty" data-category="32" data-level="medium">Medium</button>
+        <button class="difficulty" data-category="32" data-level="hard">Hard</button>  
       </div>
     </div>
   </div>
