--- a/quiz.html
+++ b/quiz.html
@@ -8,23 +8,22 @@
   <link rel="stylesheet" href="./styles/quiz-style.css">
 </head>
 <body>
-  <a href="./index.html">Back</a>
   <h1>Wanna play?</h1>
   <div id="container">
     <div id="question-info">
-      <p id="question-theme">Theme:</p>
-      <p id="question-level">Difficulty:</p>
+      <p id="question-theme">Theme: loading...</p>
+      <p id="question-level">Difficulty: loading...</p>
       <p id="question-number"><!-- question X / Y --></p>
     </div>
     <h2 id="question">Here is a question for you.</h2>
     <div id="answers">
       <div class="rows">
-        <button class="answer-btn"></button>
-        <button class="answer-btn"></button>
+        <button class="answer-btn">Loading...</button>
+        <button class="answer-btn">Loading...</button>
       </div>
       <div class="rows">
-        <button class="answer-btn"></button>
-        <button class="answer-btn"></button>
+        <button class="answer-btn">Loading...</button>
+        <button class="answer-btn">Loading...</button>
       </div>
     </div>
     <p id="result"></p>
