Add shuffle button and timer

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <h1>Coucou !</h1>
   <div id="home-container">
     <h2>Choose your quiz</h2>
+    <h3>Oh no there's too much choice, surprise me!!</h3>
+    <button id="shuffle-btn" class="theme-btn">Shuffle themes</button>
     <h3>All categories</h3>
     <div class="theme-box">
       <button class="theme-btn">All categories</button>
