--- a/quiz.html
+++ b/quiz.html
@@ -16,6 +16,7 @@
       <p id="question-number"><!-- question X / Y --></p>
     </div>
     <h2 id="question">Here is a question for you.</h2>
+    <p id="timer"></p>
     <div id="answers">
       <div class="rows">
         <button class="answer-btn">Loading...</button>
