--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   <link rel="stylesheet" href="./styles/home.css">
 </head>
 <body>
-  <h1>Coucou !</h1>
+  <h1>Trivia game (I'm trying to find a pun but right now I have nothing)</h1>
   <div id="home-container">
+    <p>Welcome! Are you feeling the need to answer all questions in the world and get smarter and/or more cultivated? Well you're at the right place, look at all those quizzes ready for you!</p>
+    <hr>
     <h2>Choose your quiz</h2>
     <h3>Oh no there's too much choice, surprise me!!</h3>
     <button id="shuffle-btn" class="theme-btn">Shuffle themes</button>
+    <br>
     <h3>All categories</h3>
     <div class="theme-box">
       <button class="theme-btn">All categories</button>
@@ -22,7 +25,6 @@
         <button class="difficulty" data-level="hard">Hard</button>  
       </div>
     </div>
-    <hr>
     <h3>Or choose a theme</h3>
     <p>(all levels of difficulty mixed or choose a level)</p>
     <div class="theme-box">
